<resources>
    <string name="app_name">WalletEase</string>

    <!--    started files -->
    <string name="started_msg">Take control of your finances with WalletEase! Track expenses, set budgets, and achieve your financial goals🚀</string>
    <string name="btn_get_start">Get Start</string>
    <string name="welcome_msg">WELCOME</string>

    <!--    Register page-->
    <string name="tvReg">Register</string>
    <string name="etEmail_txt">Email</string>
    <string name="pass_txt">Password</string>
    <string name="confPass_txt">Config Password</string>
    <string name="username_txt">Name</string>
    <string name="already_txt">You already have an account?</string>
    <string name="login_txt">Login</string>

    <!--    Login Page-->
    <string name="still_acc_txt">Still don not have an account?</string>
    <string name="profile_icon">profile icon</string>
    <string name="divider_img">divider_img</string>

    <!--    Home page -->
    <string name="tvHolder">Card Holder: </string>
    <string name="crd_no">222 2555 5444 0000</string>
    <string name="tvAmtTxt">Total amount:</string>

    <!--    Transaction Page-->
    <string name="tvTransactionHeader">Transactions</string>
    <string name="headerbg">headerBg</string>
    <string name="history">History</string>
    <string name="scrollview">ScrollView</string>
    <string name="deposit_txt">Deposit Money</string>
    <string name="amount_txt">Amount:</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="withdraw">Withdraw</string>
</resources>