<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/loginbkg"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_marginTop="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_txt"
                android:textColor="@color/purple"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="340dp"
                android:layout_height="62dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/etEmail_txt"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:autofillHints=""
                android:ems="10"
                android:textColor="@color/black"
                android:hint="@string/pass_txt"
                android:textColorHint="@color/black"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:text="@string/login_txt"
                android:layout_marginTop="8dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/still_acc_txt"
        android:layout_marginTop="14dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/navigateToReg"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/tvReg"
        android:background="@drawable/custom_edittext"
        android:textSize="24sp"
        android:textColor="@color/purple"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />


</LinearLayout>